# ProjectStore

./: .env.example  .env.test  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  dash.html  docker-compose-dev.yaml  makefile  package-lock.json  package.json  postcss.config.js  pyproject.toml  tailwind.config.js
.github/workflows/: check.yml  release.yml  test.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml
backend/src/: app.py  monitoring.py
backend/tests/: conftest.py
frontend/: .dockerignore  .eslintrc.js  Dockerfile  Makefile  README.md  package.json
frontend/.nginx/: nginx.conf
frontend/public/: index.html
frontend/src/: App.vue  env.js  main.js
migration/: env.py
migration/versions/: 0567010550ba_.py  3bd236c2b554_.py  4fa9dc1e5822_.py  6099ed2a58e0_.py  78cb334a0fd6_.py  7ab9eea782b2_.py  bc7ad6de76b8_.py  c017c35ebee6_.py  de316f0831f9_.py
services/lambdas/: email.py
src/: apm.py  app.py  gunicorn.py  monitoring.py
src/api/: __init__.py  auth.py  health_check.py
src/core/: config.py  constants.py  database.py  events.py  exceptions.py  security.py
src/lambdas/: event.py
src/utils/: dependencies.py  file.py  logger.py  miscellaneous.py
src/web/: __init__.py  dependencies.py  utils.py
tests/: conftest.py
tests/core/: test_security.py
tests/database/: test_client.py  test_file.py  test_fiscal_note.py  test_item.py  test_order.py  test_user.py
tests/factories/: client.py  file.py  fiscal_note.py  fiscal_note_item.py  item.py  order.py  user.py  (+1 more)
(+214 files in other folders)
